# AptivHire

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 1996bd38d50a_add_candidate_name_and_job_title_to_.py  381dc9efa726_add_job_title_and_candidate_name_.py  820d6fa100c3_create_user_table_for_auth.py  acd518fb7764_create_initial_tables.py  c3849395937a_change_interview_time_column_from_.py  cd2169376437_remove_unique_email_requirement_for_jobs.py  f09e94edccb9_add_reasoning_missing_experience_.py
app/: auth.py  crud.py  db.py  dependencies.py  main.py  models.py  schemas.py
app/agents/: cv_agent.py  jd_agent.py  matcher.py  scheduler.py
app/routers/: auth.py  candidates.py  interviews.py  jobs.py  matches.py
app/schemas/: auth_schema.py  candidate_schema.py  interview_schema.py  job_schema.py  match_schema.py
app/utils/: email_sender.py  gmail api.md  gmail api.txt  gmail_helper.py  pdf_parser.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CandidatePanel.jsx  ExistingCandidatesModal.jsx  ExistingJobsModal.jsx  Header.jsx  InterviewPanel.jsx  JobPanel.jsx  Layout.jsx  MatchPanel.jsx  PrivateRoute.jsx  Sidebar.jsx
frontend/src/pages/: Auth.jsx  Candidates.jsx  Dashboard.jsx  Home.jsx  InterviewDetails.jsx  Interviews.jsx  Jobs.jsx  MatchDetails.jsx  Matches.jsx  landing.jsx
frontend/src/services/: api.js  auth.js
frontend/src/utils/: date.js
