[project]
name = "ai-recruit-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=4.0.2",
    "alembic>=1.16.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "google-api-python-client>=2.182.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=0.8.1",
    "pydantic[email]>=2.11.7",
    "pymupdf>=1.26.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "tzdata>=2025.2",
    "uvicorn>=0.35.0",
]
